Add Enum Size to PDFFile

--- a/maven/IMG2PDF/pom.xml
+++ b/maven/IMG2PDF/pom.xml
@@ -58,7 +58,15 @@
 						<goals>
 							<goal>shade</goal>
 						</goals>
+						<configuration>
+							<artifactSet>
+								<excludes>
+								
+								</excludes>
+							</artifactSet>
+						</configuration>
 					</execution>
+
 				</executions>
 			</plugin>
 		</plugins>
