--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -1,4 +1,8 @@
-help_create=Type create -h to get more help.
+root_description=This program is used to convert or merge multiple image files to a single pdf.Type -h to get more help.
+
+help_action=The action to do.
+
+help_create=Before convertion,you should declare how the pdf look like(Size,Align...and so on) and declare where are the source images and where pdf should be put.Finally,these parameters will be combined to a xml file called TaskList.Type create -h to get more help.
 help_create_pdf_size=Each page size of pdf.\ntype DEPEND to set each page size depend on each image size.
 help_create_pdf_align=Alignment of page of pdf.
 help_create_pdf_direction=Image direction of each page of pdf.
@@ -19,5 +23,5 @@ help_add=Type create add -h to get more help.
 help_add_source=Source files.
 help_add_filter=Filter for image files.Using Regular expressions.
 
-help_convert=Type convert -h to get more help.
+help_convert=Merge multiple images to pdf file by declared TaskList.Type convert -h to get more help.
 help_convert_tasklist_source=TaskList file(*.xml)
