--- a/maven/IMG2PDF/pom.xml
+++ b/maven/IMG2PDF/pom.xml
@@ -102,6 +102,7 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>org.vincentyeh.IMG2PDF.commandline.MainProgram</mainClass>
+									<!-- <mainClass>org.vincentyeh.IMG2PDF.sample.WalkAnimation</mainClass> -->
 								</transformer>
 							</transformers>
 
