--- a/maven/IMG2PDF/pom.xml
+++ b/maven/IMG2PDF/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.vincentyeh</groupId>
 	<artifactId>IMG2PDF</artifactId>
-	<version>1.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>IMG2PDF</name>
