Complete partial translation in CreateAction.
Former-commit-id: e12a56d49ed54181cb8bd38c00960042a7b0fde4

--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -19,3 +19,18 @@ help_create_filter=Filter for image files.Using Regular expressions.
 
 help_convert=Merge multiple images to pdf file by declared TaskList.Type convert -h to get more help.
 help_convert_tasklist_source=TaskList file(*.xml)
+
+
+err_filenotfound=File not found:%s
+err_path_is_file=Path should be a file:%s
+err_tasklist_create=Unable to create task list file:
+err_unrecognizable_enum_long=%s is not a recognizable enum of %s.\r\nAvaiable choices:%s
+err_unrecognizable_enum_short=%s is not a recognizable enum of %s.
+common_verified=Verified
+common_imported=Imported
+common_exported=Exported
+
+arg_align=Page Alignment
+arg_size=Page Size
+arg_direction=Default direction
+arg_auto_rotate=Auto Rotate
