Complete partial translation of CreatAction.Add debug mode.
Former-commit-id: e33091e33d91de994d1a98b2384505c9d28c03cc

--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -2,6 +2,7 @@ root_description=This program is used to convert or merge multiple image files t
 root_mode=Action to do.Type -m convert/create -h to get more help.Available choices:%s
 root_help=Type -h to get more help.
 
+help_create_debug=Open debug mode.
 help_create=Before conversion,you should declare how the pdf look like(Size,Align...and so on) and declare where are the source images and where pdf should be put.Finally,these parameters will be combined to a xml file called TaskList.Type create -h to get more help.
 help_create_pdf_size=Each page size of pdf.\ntype DEPEND to set each page size depend on each image size.Available choices:%s
 help_create_pdf_align=Alignment of page of pdf.Usage:%s
@@ -20,6 +21,9 @@ help_create_filter=Filter for image files.Using Regular expressions.
 help_convert=Merge multiple images to pdf file by declared TaskList.Type convert -h to get more help.
 help_convert_tasklist_source=TaskList file(*.xml)
 
+import_from_list=Import tasks from %s
+source_verifying=Verifying source folder:%s
+tasklist_config=TaskList Configuration
 
 err_filenotfound=File not found:%s
 err_path_is_file=Path should be a file:%s
@@ -29,8 +33,12 @@ err_unrecognizable_enum_short=%s is not a recognizable enum of %s.
 common_verified=Verified
 common_imported=Imported
 common_exported=Exported
+common_version=Version
 
 arg_align=Page Alignment
 arg_size=Page Size
 arg_direction=Default direction
 arg_auto_rotate=Auto Rotate
+arg_source=Sources
+arg_tasklist_dst=Destination of TaskList
+arg_filter=File filter
