Complete translation of CreatAction.
Former-commit-id: 77c6035ae1020a9c9115e9fd69e3955b3c9a4cce

--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -34,6 +34,7 @@ common_verified=Verified
 common_imported=Imported
 common_exported=Exported
 common_version=Version
+common_developer=Developer
 
 arg_align=Page Alignment
 arg_size=Page Size
