Simplify MainProgram by making it became subclass of Action.
Former-commit-id: 0607c2245e8d22a628a1ce1596ff63291a1a6b44

--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -1,5 +1,5 @@
 root_description=This program is used to convert or merge multiple image files to a single pdf.Type -h to get more help.
-root_mode=Action to do.Type -m convert/create -h to get more help.Available choices:%s
+root_mode=Action to do.Available choices:%s
 root_help=Type -h to get more help.
 
 help_create_debug=Open debug mode.
