--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -30,6 +30,8 @@ err_path_is_file=Path should be a file:%s
 err_tasklist_create=Unable to create task list file:
 err_unrecognizable_enum_long=%s is not a recognizable enum of %s.\r\nAvaiable choices:%s
 err_unrecognizable_enum_short=%s is not a recognizable enum of %s.
+err_missing_option=Missing required option
+
 common_verified=Verified
 common_imported=Imported
 common_exported=Exported
