--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -22,7 +22,7 @@ help_convert=Merge multiple images to pdf file by declared TaskList.Type convert
 help_convert_tasklist_source=TaskList file(*.xml)
 
 import_from_list=Import tasks from %s
-source_verifying=Verifying source folder:%s
+source_verifying=Verifying source folder:
 tasklist_config=TaskList Configuration
 
 err_filenotfound=File not found:%s
@@ -31,6 +31,14 @@ err_tasklist_create=Unable to create task list file:
 err_unrecognizable_enum_long=%s is not a recognizable enum of %s.\r\nAvaiable choices:%s
 err_unrecognizable_enum_short=%s is not a recognizable enum of %s.
 err_missing_option=Missing required option
+err_missing_argument_option=Missing argument for option: %s
+
+err_source_filenotfound=Source Folder Path in %s line:%d not found.->%s
+err_source_path_is_file=Source Folder Path in %s line:%d should be a folder.Not a File.->%s
+
+common_verifying=Verifying
+common_importing=Importing
+common_exporting=Exporting
 
 common_verified=Verified
 common_imported=Imported
