--- a/maven/IMG2PDF/pom.xml
+++ b/maven/IMG2PDF/pom.xml
@@ -21,6 +21,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -31,7 +33,7 @@
 			<version>2.0.6</version>
 		</dependency>
 
-		
+
 
 
 		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
