Handle UnrecognizedOptionException.Fix CreateAction start with null.

--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -53,6 +53,8 @@ err_unrecognizable_enum_long = %s is not a recognizable enum of %s.\r\nAvaiable 
 
 err_unrecognizable_enum_short = %s is not a recognizable enum of %s.
 
+err_unrecognized_option = %s is not a recognizable option.
+
 help_convert = Merge multiple images to pdf file by declared TaskList.Type convert -h to get more help.
 
 help_convert_tasklist_source = TaskList file(*.xml)
