Change compare method of FileFilterHelper to PathMatcher

--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -37,6 +37,8 @@ common_version = Version
 
 err_filenotfound = File not found:%s
 
+err_filter = File Filter error:%s
+
 err_missing_argument_option = Missing argument for option: %s
 
 err_missing_option = Missing required option
