--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -59,6 +59,8 @@ err_unrecognized_option = %s is not a recognizable option.
 
 help_convert = Merge multiple images to pdf file by declared TaskList.Type convert -h to get more help.
 help_convert_memory_max_usage=Max usage of memory.Default:%s
+help_convert_open_when_complete=Open PDF when conversion is completed.
+help_convert_overwrite_output=Overwrite existing file.
 help_convert_tasklist_source = TaskList file(*.xml)
 help_convert_tmp_folder=Temp files location.Default path:%s
 help_create = Before conversion,you should declare how the pdf look like(Size,Align...and so on) and declare where are the source images and where pdf should be put.Finally,these parameters will be combined to a xml file called TaskList.Type create -h to get more help.
@@ -68,9 +70,8 @@ help_create_debug = Open debug mode.
 help_create_filter = Filter for image files.Using Regular expressions.
 
 help_create_list_destination = Output destination task list(*.XML).
-help_create_overwrite_output=Overwrite file even it is exists.
 help_create_overwrite_tasklist=Overwrite TaskList file even it is exists.
-help_create_pdf_align = Alignment of page of pdf.Usage:%s
+help_create_pdf_align = Alignment of page of pdf.Usage:
 
 help_create_pdf_auto_rotate = Auto rotate each page.
 
