--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -56,14 +56,13 @@ err_unrecognizable_enum_long = %s is not a recognizable enum of %s.\r\nAvaiable 
 err_unrecognizable_enum_short = %s is not a recognizable enum of %s.
 
 err_unrecognized_option = %s is not a recognizable option.
-
-help_convert = Merge multiple images to pdf file by declared TaskList.Type convert -h to get more help.
+help_convert=Merge multiple images to pdf file by declared TaskList.Type -m convert -h to get more help.
 help_convert_memory_max_usage=Max usage of memory.Default:%s
 help_convert_open_when_complete=Open PDF when conversion is completed.
 help_convert_overwrite_output=Overwrite existing file.
 help_convert_tasklist_source = TaskList file(*.xml)
 help_convert_tmp_folder=Temp files location.Default path:%s
-help_create = Before conversion,you should declare how the pdf look like(Size,Align...and so on) and declare where are the source images and where pdf should be put.Finally,these parameters will be combined to a xml file called TaskList.Type create -h to get more help.
+help_create=Before conversion,you should declare how the pdf look like(Size,Align...and so on) and declare where are the source images and where pdf should be put.Finally,these parameters will be combined to a xml file called TaskList.Type -m create -h to get more help.
 
 help_create_debug = Open debug mode.
 
