--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -54,7 +54,7 @@ err_tasklist_create = Unable to create task list file:
 err_unrecognizable_enum_long = %s is not a recognizable enum of %s.\r\nAvaiable choices:%s
 
 err_unrecognizable_enum_short = %s is not a recognizable enum of %s.
-
+err_unrecognized_argument_option=Unrecognized option:%s
 err_unrecognized_option = %s is not a recognizable option.
 help_convert=Merge multiple images to pdf file by declared TaskList.Type -m convert -h to get more help.
 help_convert_memory_max_usage=Max usage of memory.Default:%s
