--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -1,107 +1,68 @@
+argperser.err.missing_argument_option = Missing argument for option: %s
+argperser.err.missing_option = Missing required option
 
-arg_align = Page Alignment
+convert.arg.memory_max_usage.help = Max usage of memory.Default:%s
+convert.arg.open_when_complete.help = Open PDF when conversion is completed.
+convert.arg.overwrite_output.help = Overwrite existing file.
+convert.arg.tasklist_source.help = TaskList file(*.xml)
+convert.arg.tmp_folder.help = Temp files location.Default path:%s
+convert.help = Merge multiple images to pdf file by declared TaskList.Type -m convert -h to get more help.
+convert.import_tasklists = Import tasklist:
+convert.pdf_conversion_task = PDF Conversion Task
+convert.start_conversion = Start conversion!!!
 
-arg_auto_rotate = Auto Rotate
+create.arg.debug.help = Open debug mode.
+create.arg.filter.help = Filter for image files.Using Regular expressions.
+create.arg.filter.name = File filter
+create.arg.list_destination.help = Output destination task list(*.XML).
+create.arg.list_destination.name = Destination of TaskList
+create.arg.overwrite_tasklist.help = Overwrite TaskList file even it is exists.
+create.arg.pdf_align.help = Alignment of page of pdf.Usage:
+create.arg.pdf_align.name = Page Alignment
+create.arg.pdf_auto_rotate.help = Auto rotate each page.
+create.arg.pdf_auto_rotate.name = Auto Rotate
+create.arg.pdf_destination.help = Destination of converted file.
+create.arg.pdf_destination.name = Destination of PDF
+create.arg.pdf_direction.help = Image direction of each page of pdf.Available choices:%s
+create.arg.pdf_direction.name = Default direction
+create.arg.pdf_owner_password.help = PDF owner password.
+create.arg.pdf_permission.help = Access permission of document.
+create.arg.pdf_sequence.help = Sort by increasing(0,1,2,3) or decreasing(3,2,1,0) value.Available choices:%s
+create.arg.pdf_size.help = Each page size of pdf.\ntype DEPEND to set each page size depend on each image size.Available choices:%s
+create.arg.pdf_size.name = Page Size
+create.arg.pdf_sortby.help = Order files by name or date.Available choices:%s
+create.arg.pdf_user_password.help = PDF user password.
+create.arg.source.help = Source files.
+create.arg.source.name = Sources
+create.err.filter = File Filter error:%s
+create.err.source_filenotfound = Source Folder Path in %s line:%d not found.->%s
+create.err.source_path_is_file = Source Folder Path in %s line:%d should be a folder.Not a File.->%s
+create.err.source_path_is_folder = Source Folder Path in %s line:%d should be a File.Not a Folder.->%s
+create.err.tasklist_create = Unable to create task list file:
+create.help = Before conversion,you should declare how the pdf look like(Size,Align...and so on) and declare where are the source images and where pdf should be put.Finally,these parameters will be combined to a xml file called TaskList.Type -m create -h to get more help.
+create.import_from_list = Import tasks from %s
 
-arg_direction = Default direction
+main.arg.mode.help = Action to do.Available choices:%s
+main.help = Type -h to get more help.
 
-arg_filter = File filter
+public.err.filenotfound = File not found:%s
+public.err.overwrite = File is exists.Can't overwrite file:%s
+public.err.path_is_file = Path should be a file:%s
+public.err.path_is_folder = Path should be a folder:%s
+public.err.unrecognizable_enum_long = %s is not a recognizable enum of %s.\r\nAvaiable choices:%s
+public.err.unrecognizable_enum_short = %s is not a recognizable enum of %s.
+public.err.unrecognized_argument_option = Unrecognized option:%s
+public.err.unrecognized_option = %s is not a recognizable option.
+public.info.developer = Developer
+public.info.exported = Exported
+public.info.exporting = Exporting
+public.info.imported = Imported
+public.info.importing = Importing
+public.info.name = Name
+public.info.progress = Progress
+public.info.required_folder_created = Required folders have been created in advance:%s
+public.info.verified = Verified
+public.info.verifying = Verifying
+public.info.version = Version
 
-arg_pdf_dst = Destination of PDF
-
-arg_size = Page Size
-
-arg_source = Sources
-
-arg_tasklist_dst = Destination of TaskList
-
-common_developer = Developer
-
-common_exported = Exported
-
-common_exporting = Exporting
-
-common_imported = Imported
-
-common_importing = Importing
-
-common_name = Name
-
-common_progress = Progress
-common_start_conversion=Start conversion!!!
-common_verified = Verified
-
-common_verifying = Verifying
-
-common_version = Version
-
-err_filenotfound = File not found:%s
-
-err_filter = File Filter error:%s
-
-err_missing_argument_option = Missing argument for option: %s
-
-err_missing_option = Missing required option
-err_overwrite=File is exists.Can't overwrite file:%s
-err_path_is_file = Path should be a file:%s
-err_path_is_folder=Path should be a folder:%s
-err_source_filenotfound = Source Folder Path in %s line:%d not found.->%s
-
-err_source_path_is_file = Source Folder Path in %s line:%d should be a folder.Not a File.->%s
-err_source_path_is_folder=Source Folder Path in %s line:%d should be a File.Not a Folder.->%s
-err_tasklist_create = Unable to create task list file:
-
-err_unrecognizable_enum_long = %s is not a recognizable enum of %s.\r\nAvaiable choices:%s
-
-err_unrecognizable_enum_short = %s is not a recognizable enum of %s.
-err_unrecognized_argument_option=Unrecognized option:%s
-err_unrecognized_option = %s is not a recognizable option.
-help_convert=Merge multiple images to pdf file by declared TaskList.Type -m convert -h to get more help.
-help_convert_memory_max_usage=Max usage of memory.Default:%s
-help_convert_open_when_complete=Open PDF when conversion is completed.
-help_convert_overwrite_output=Overwrite existing file.
-help_convert_tasklist_source = TaskList file(*.xml)
-help_convert_tmp_folder=Temp files location.Default path:%s
-help_create=Before conversion,you should declare how the pdf look like(Size,Align...and so on) and declare where are the source images and where pdf should be put.Finally,these parameters will be combined to a xml file called TaskList.Type -m create -h to get more help.
-
-help_create_debug = Open debug mode.
-
-help_create_filter = Filter for image files.Using Regular expressions.
-
-help_create_list_destination = Output destination task list(*.XML).
-help_create_overwrite_tasklist=Overwrite TaskList file even it is exists.
-help_create_pdf_align = Alignment of page of pdf.Usage:
-
-help_create_pdf_auto_rotate = Auto rotate each page.
-
-help_create_pdf_destination = Destination of converted file.
-
-help_create_pdf_direction = Image direction of each page of pdf.Available choices:%s
-
-help_create_pdf_owner_password = PDF owner password.
-
-help_create_pdf_permission = Access permission of document.
-
-help_create_pdf_sequence = Sort by increasing(0,1,2,3) or decreasing(3,2,1,0) value.Available choices:%s
-
-help_create_pdf_size = Each page size of pdf.\ntype DEPEND to set each page size depend on each image size.Available choices:%s
-
-help_create_pdf_sortby = Order files by name or date.Available choices:%s
-
-help_create_pdf_user_password = PDF user password.
-
-help_create_source = Source files.
-
-import_from_list = Import tasks from %s
-
-import_tasklists = Import tasklist:
-info_required_folder_created=Required folders have been created in advance:%s
-pdf_conversion_task = PDF Conversion Task
-
-root_description = This program is used to convert or merge multiple image files to a single pdf.Type -h to get more help.
-
-root_help = Type -h to get more help.
-
-root_mode = Action to do.Available choices:%s
-
-tasklist_config = TaskList Configuration
+create.tasklist_config = TaskList Configuration
