Remove usage of properties in UnrecognizedEnumException

--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -49,10 +49,8 @@ public.err.filenotfound = File not found:%s
 public.err.overwrite = File is exists.Can't overwrite file:%s
 public.err.path_is_file = Path should be a file:%s
 public.err.path_is_folder = Path should be a folder:%s
-public.err.unrecognizable_enum_long = %s is not a recognizable enum of %s.\r\nAvaiable choices:%s
-public.err.unrecognizable_enum_short = %s is not a recognizable enum of %s.
+public.err.unrecognizable_enum_long = %s is not a recognizable enum of %s.\r\nAvailable choices:%s
 public.err.unrecognized_argument_option = Unrecognized option:%s
-public.err.unrecognized_option = %s is not a recognizable option.
 public.info.developer = Developer
 public.info.exported = Exported
 public.info.exporting = Exporting
