Remove usage of properties in AbstractAction

--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -1,5 +1,5 @@
 argperser.err.missing_argument_option = Missing argument for option: %s
-argperser.err.missing_option = Missing required option
+argperser.err.missing_option=Missing required option:%s
 
 convert.arg.memory_max_usage.help = Max usage of memory.Default:%s
 convert.arg.open_when_complete.help = Open PDF when conversion is completed.
