Write language_package.properties pack for listener

--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -8,7 +8,6 @@ convert.arg.tasklist_source.help = TaskList file(*.xml)
 convert.arg.tmp_folder.help = Temp files location.Default path:%s
 convert.help = Merge multiple images to pdf file by declared TaskList.Type -m convert -h to get more help.
 convert.import_tasklists = Import tasklist:
-convert.pdf_conversion_task = PDF Conversion Task
 convert.start_conversion = Start conversion!!!
 
 create.arg.debug.help = Open debug mode.
@@ -64,3 +63,9 @@ public.info.verifying = Verifying
 public.info.version = Version
 
 create.tasklist_config = TaskList Configuration
+convert.listener.progress=Progress:
+convert.listener.err.image=Reading image Fail:%s
+convert.listener.err.conversion=Conversion Fail:%s
+convert.listener.done=[Done] %s
+convert.listener.converting=[%s] %d/%d images added %s
+
