--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -67,5 +67,6 @@ convert.listener.progress=Progress:
 convert.listener.err.image=Reading image Fail:%s
 convert.listener.err.conversion=Conversion Fail:%s
 convert.listener.done=[Done] %s
-convert.listener.converting=[%s] %d/%d images added %s
+convert.listener.converting=[%s] %s %d/%d images added %s
+convert.listener.err.overwrite=[File is already exist,nothing change] %s
 
