--- a/maven/IMG2PDF/pom.xml
+++ b/maven/IMG2PDF/pom.xml
@@ -113,7 +113,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.vincentyeh.IMG2PDF.commandline.action.MainProgram</mainClass>
+                                    <mainClass>org.vincentyeh.IMG2PDF.MainProgram</mainClass>
                                     <!-- <mainClass>org.vincentyeh.IMG2PDF.sample.WalkAnimation</mainClass> -->
                                 </transformer>
                             </transformers>
