--- a/maven/IMG2PDF/src/main/resources/language_package.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package.properties
@@ -66,7 +66,7 @@ create.tasklist_config = TaskList Configuration
 convert.listener.progress=Progress:
 convert.listener.err.image=Reading image Fail:%s
 convert.listener.err.conversion=Conversion Fail:%s
-convert.listener.done=[Done] %s
+convert.listener.done=[Done][%d s] %s
 convert.listener.converting=[%s] %s %d/%d images added %s
 convert.listener.err.overwrite=[File is already exist,nothing change] %s
 
