--- a/maven/IMG2PDF/pom.xml
+++ b/maven/IMG2PDF/pom.xml
@@ -27,11 +27,11 @@
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.jdom/jdom2 -->
-        <dependency>
-            <groupId>org.jdom</groupId>
-            <artifactId>jdom2</artifactId>
-            <version>2.0.6</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.jdom</groupId>-->
+<!--            <artifactId>jdom2</artifactId>-->
+<!--            <version>2.0.6</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
