--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -1,12 +1,18 @@
-create.filter.description = Filter for image files.Using Regular expressions.default:${DEFAULT-VALUE}
-create.list_destination.description = Output destination task list(*.XML).
-create.overwrite_tasklist.description = Overwrite TaskList file even it is exists.
-create.pdf_align.description=Alignment of page of pdf.(default:${DEFAULT-VALUE})
-create.pdf_auto_rotate.description = Auto rotate each page.
-create.pdf_destination.description = Destination of converted file.
-create.pdf_direction.description=Image direction of each page of pdf.(default:${DEFAULT-VALUE})
-create.pdf_owner_password.description = PDF owner password.
-create.pdf_permission.description = Access permission of document.default:${DEFAULT-VALUE}
-create.pdf_size.description = Each page size of pdf.\ntype DEPEND to set each page size depend on each image size.
-create.pdf_user_password.description = PDF user password.
-create.source.description = Source files.
+img2pdf.create.filter=Filter for image files.Using Regular expressions.(default:${DEFAULT-VALUE})
+img2pdf.create.list_destination = Output destination task list(*.XML).
+img2pdf.create.overwrite_tasklist = Overwrite TaskList file even it is exists.
+img2pdf.create.pdf_align=Alignment of page of pdf.(default:${DEFAULT-VALUE})
+img2pdf.create.pdf_auto_rotate = Auto rotate each page.
+img2pdf.create.pdf_destination = Destination of converted file.
+img2pdf.create.pdf_direction=Image direction of each page of pdf.(default:${DEFAULT-VALUE})
+img2pdf.create.pdf_owner_password = PDF owner password.
+img2pdf.create.pdf_permission = Access permission of document.default:${DEFAULT-VALUE}
+img2pdf.create.pdf_size = Each page size of pdf.Type DEPEND to set each page size depend on each image size.
+img2pdf.create.pdf_user_password = PDF user password.
+img2pdf.create.source = Source files.
+img2pdf.create.usage.header=Create a xml file including the source file path,document configuration and page configuration.
+help=Getting more information
+img2pdf.usage.header=This program can convert multiple image into pdf.
+img2pdf.create.<sourceFiles>[0..*]=Source file that contain several line of directory path.
+img2pdf.create.sorter=Specify the sort pattern.(default:${DEFAULT-VALUE})
+
