--- a/maven/IMG2PDF/pom.xml
+++ b/maven/IMG2PDF/pom.xml
@@ -7,7 +7,11 @@
     <artifactId>IMG2PDF</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-
+    <developers>
+        <developer>
+            <name>VincentYeh-dev</name>
+        </developer>
+    </developers>
     <name>IMG2PDF</name>
     <url>http://maven.apache.org</url>
 
