Complete ConvertCommand basic function.

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -16,3 +16,10 @@ img2pdf.usage.header=This program can convert multiple image into pdf.
 img2pdf.create.<sourceFiles>[0..*]=Source file that contain several line of directory path.
 img2pdf.create.sorter=Specify the sort pattern.(default:${DEFAULT-VALUE})
 
+img2pdf.convert.memory_max_usage = Max usage of memory.(default:${DEFAULT-VALUE})
+img2pdf.convert.open_when_complete = Open PDF when conversion is completed.
+img2pdf.convert.overwrite = Overwrite existing file.
+img2pdf.convert.tasklist_source = TaskList file(*.xml)
+img2pdf.convert.temp_folder = Temp files location.(default:${DEFAULT-VALUE})
+img2pdf.convert.usage.header = Merge multiple images to pdf file by declared TaskList.
+img2pdf.convert.<tasklist_sources>[0.*]=Tasklist path
