--- a/maven/IMG2PDF/src/main/resources/cmd_err.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_err.properties
@@ -1,5 +1,10 @@
-err.parameter.parameter.handler.missing_required = Missing required %s: '%s'
-err.parameter.handler.try_help = "Try '%s --help' for more information.
+err.parameter.handler.missing_required.option=Missing required options: '%s'
+err.parameter.handler.missing_required.parameter=Missing required parameters: '%s'\
 
+err.parameter.handler.try_help = "Try '%s --help' for more information.
+err.parameter.handler.type_convert.enum=Invalid value for %s '%s': expected one of [%s] (case-sensitive) but was '%s'
+err.parameter.handler.type_convert.normal=Invalid value for %s '%s': %s(invalid value) \
+
+err.parameter.handler.unmatched_argument.unknown_option=Unknown options: %s
 public.option = option
 public.parameter = parameter
