Add more handler to CreateCommand.

--- a/maven/IMG2PDF/src/main/resources/cmd_err.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_err.properties
@@ -1,3 +1,8 @@
+err.execution.create.handler.overwrite=Overwrite deny: %s
+err.execution.create.handler.save=Unable to save: %s
+err.execution.create.handler.source.empty_image=No image was found in %s.
+err.execution.create.handler.source.not_found=Source file not found: %s
+err.execution.create.handler.source.wrong_type=Path should be a %s,but was '%s': %s
 err.parameter.handler.missing_required.option=Missing required options: '%s'
 err.parameter.handler.missing_required.parameter=Missing required parameters: '%s'\
 
@@ -6,5 +11,7 @@ err.parameter.handler.type_convert.enum=Invalid value for %s '%s': expected one 
 err.parameter.handler.type_convert.normal=Invalid value for %s '%s': %s(invalid value) \
 
 err.parameter.handler.unmatched_argument.unknown_option=Unknown options: %s
+public.file.type.file=file
+public.file.type.folder=folder
 public.option = option
 public.parameter = parameter
