Handling DirlistTaskFactory.DirListException in CreateHandler

--- a/maven/IMG2PDF/src/main/resources/cmd_err.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_err.properties
@@ -1,3 +1,7 @@
+err.execution.create.handler.dirlist.not_found=Dirlist file not found: %s\
+
+err.execution.create.handler.dirlist.wrong_type=Path should be a %s,but was '%s': %s\
+
 err.execution.create.handler.overwrite=Overwrite deny: %s
 err.execution.create.handler.save=Unable to save: %s
 err.execution.create.handler.source.empty_image=No image was found in %s.
