Handle ConvertCommand error.

--- a/maven/IMG2PDF/src/main/resources/cmd_err.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_err.properties
@@ -1,3 +1,13 @@
+err.execution.convert.handler.conversion.conversion=Conversion error: %s\
+
+err.execution.convert.handler.conversion.overwrite=Overwrite deny: %s\
+
+err.execution.convert.handler.conversion.read_image=Image read error: %s
+err.execution.convert.handler.tasklist.no_task=No task was found in: %s
+err.execution.convert.handler.tasklist.not_found=TaskList file not found: %s\
+
+err.execution.convert.handler.tasklist.wrong_type=Path should be a %s,but was '%s': %s\
+
 err.execution.create.handler.dirlist.not_found=Dirlist file not found: %s\
 
 err.execution.create.handler.dirlist.wrong_type=Path should be a %s,but was '%s': %s\
