--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -14,10 +14,13 @@ img2pdf.create.overwrite_tasklist = Overwrite TaskList file even it is exists.
 img2pdf.create.pdf_align = Alignment of page of pdf.(default:${DEFAULT-VALUE})
 img2pdf.create.pdf_auto_rotate = Auto rotate each page.
 img2pdf.create.pdf_destination = Destination of converted file.
-img2pdf.create.pdf_direction = Image direction of each page of pdf.(default:${DEFAULT-VALUE})
+img2pdf.create.pdf_direction.0 = Image direction of each page of pdf.(default:${DEFAULT-VALUE})
+img2pdf.create.pdf_direction.1=Available options: ${COMPLETION-CANDIDATES}
 img2pdf.create.pdf_owner_password = PDF owner password.
 img2pdf.create.pdf_permission = Access permission of document.default:${DEFAULT-VALUE}
-img2pdf.create.pdf_size = Each page size of pdf.Type DEPEND to set each page size depend on each image size.
+img2pdf.create.pdf_size.0 = Each page size of pdf.Type DEPEND to set each page size depend on each image size.
+img2pdf.create.pdf_size.1=Available options: ${COMPLETION-CANDIDATES}\
+
 img2pdf.create.pdf_user_password = PDF user password.
 img2pdf.create.sorter = Specify the sort pattern.(default:${DEFAULT-VALUE})
 img2pdf.create.source = Source files.
