--- a/maven/IMG2PDF/pom.xml
+++ b/maven/IMG2PDF/pom.xml
@@ -27,6 +27,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <exe-name>img2pdf</exe-name>
+        <jar-name>${project.name}-${project.version}</jar-name>
+
+        <main-class>org.vincentyeh.IMG2PDF.MainProgram</main-class>
     </properties>
 
     <dependencies>
@@ -90,6 +94,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <finalName>${jar-name}</finalName>
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
@@ -104,15 +109,13 @@
                             <artifactSet>
                                 <excludes>
                                     <exclude>junit:junit</exclude>
-
                                 </excludes>
                             </artifactSet>
 
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.vincentyeh.IMG2PDF.MainProgram</mainClass>
-                                    <!-- <mainClass>org.vincentyeh.IMG2PDF.sample.WalkAnimation</mainClass> -->
+                                    <mainClass>${main-class}</mainClass>
                                 </transformer>
                             </transformers>
 
@@ -121,7 +124,35 @@
 
                 </executions>
             </plugin>
-
+            <!-- LAUNCH4J -->
+            <plugin>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>l4j-clui</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                        <configuration>
+                            <headerType>console</headerType>
+                            <jar>target/${jar-name}.jar</jar>
+                            <outfile>target/bin/${exe-name}.exe</outfile>
+                            <downloadUrl>http://www.java.com</downloadUrl>
+                            <classPath>
+                                <mainClass>${main-class}</mainClass>
+                            </classPath>
+                            <jre>
+                                <bundledJre64Bit>false</bundledJre64Bit>
+                                <bundledJreAsFallback>false</bundledJreAsFallback>
+                                <minVersion>${maven.compiler.source}</minVersion>
+                                <jdkPreference>preferJre</jdkPreference>
+                            </jre>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
