--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -1,15 +1,14 @@
-execution.convert.start.import_tasklists = Import tasklist:
 execution.convert.start.start_conversion = Start conversion!!!
 
-execution.convert.handler.conversion.conversion = Conversion error: %s
-execution.convert.handler.conversion.overwrite=Overwrite deny: %s
-execution.convert.handler.conversion.read_image=Image read error: %s
-execution.convert.handler.dirlist.not_found=Dirlist file not found: %s
-execution.convert.handler.dirlist.wrong_type=Path should be a %s,but was '%s': %s
-execution.convert.handler.overwrite=Overwrite deny: %s
-execution.convert.handler.source.empty_image = No image was found in %s.
-execution.convert.handler.source.not_found = Source file not found: %s
-execution.convert.handler.source.wrong_type = Path should be a %s,but was '%s': %s
+handler.conversion.conversion = Conversion error: %s
+handler.conversion.overwrite=Overwrite deny: %s
+handler.conversion.read_image=Image read error: %s
+handler.dirlist.not_found=Dirlist file not found: %s
+handler.dirlist.wrong_type=Path should be a %s,but was '%s': %s
+handler.source.overwrite=Overwrite deny: %s
+handler.source.empty_image = No image was found in %s.
+handler.source.not_found = Source file not found: %s
+handler.source.wrong_type = Path should be a %s,but was '%s': %s
 parameter.handler.missing_required.option = Missing required options: '%s'
 parameter.handler.missing_required.parameter = Missing required parameters: '%s'
 parameter.handler.try_help = "Try '%s --help' for more information.
