--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -9,12 +9,12 @@ handler.exception.source.overwrite=Overwrite deny: %s
 handler.exception.source.empty_image = No image was found in %s.
 handler.exception.source.not_found = Source file not found: %s
 handler.exception.source.wrong_type = Path should be a %s,but was '%s': %s
-parameter.handler.missing_required.option = Missing required options: '%s'
-parameter.handler.missing_required.parameter = Missing required parameters: '%s'
-parameter.handler.try_help = "Try '%s --help' for more information.
-parameter.handler.type_convert.enum = Invalid value for %s '%s': expected one of [%s] (case-sensitive) but was '%s'
-parameter.handler.type_convert.normal = Invalid value for %s '%s': %s(invalid value)
-parameter.handler.unmatched_argument.unknown_option=Unknown options: %s
+handler.exception.missing_required.option = Missing required options: '%s'
+handler.exception.missing_required.parameter = Missing required parameters: '%s'
+handler.exception.try_help = "Try '%s --help' for more information.
+handler.exception.type_convert.enum = Invalid value for %s '%s': expected one of [%s] (case-sensitive) but was '%s'
+handler.exception.type_convert.normal = Invalid value for %s '%s': %s(invalid value)
+handler.exception.unmatched_argument.unknown_option=Unknown options: %s
 
 help = Getting more information
 
