--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -11,7 +11,7 @@ handler.exception.source.not_found = Source file not found: %s
 handler.exception.source.wrong_type = Path should be a %s,but was '%s': %s
 handler.exception.missing_required.option = Missing required options: '%s'
 handler.exception.missing_required.parameter = Missing required parameters: '%s'
-handler.exception.try_help = "Try '%s --help' for more information.
+public.try_help = "Try '%s --help' for more information.
 handler.exception.type_convert.enum = Invalid value for %s '%s': expected one of [%s] (case-sensitive) but was '%s'
 handler.exception.type_convert.normal = Invalid value for %s '%s': %s(invalid value)
 handler.exception.unmatched_argument.unknown_option=Unknown options: %s
