--- a/maven/IMG2PDF/src/main/resources/pdf_converter_listener.properties
+++ b/maven/IMG2PDF/src/main/resources/pdf_converter_listener.properties
@@ -1,5 +1,3 @@
-convert.listener.converting = [%s] %s %d/%d images added %s
-convert.listener.done = [Done][%d s] %s
-convert.listener.err.conversion = Conversion Fail:%s
-convert.listener.err.image = Reading image Fail:%s
-convert.listener.err.overwrite = [File is already exist,nothing change] %s
+convert.listener.converting=@|yellow [%s] %s %d/%d images added %s|@
+convert.listener.done=[@|green Done|@] @|blue [%d s]|@ %s
+
