Handle InvalidFileException in PDFConverterExceptionHandler.

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -50,5 +50,6 @@ public.importing = Importing
 public.option = option
 public.parameter = parameter
 img2pdf.convert.pdf_user_password=PDF user password.
+handler.exception.conversion.invalid_file=Illegal file:%s
 
 
