Handle FileNameFormatter.NotMappedPattern.

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -51,5 +51,6 @@ public.option = option
 public.parameter = parameter
 img2pdf.convert.pdf_user_password=PDF user password.
 handler.exception.conversion.invalid_file=Illegal file:%s
+handler.exception.dirlist_task_factory.source.no_map_pattern=No mapped value for pattern:%s
 
 
