Handle PDFConverterExceptionHandler in ConvertCommand.

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -1,8 +1,8 @@
-execution.convert.start.start_conversion = Start conversion!!!
+execution.convert.start.start_conversion=Start conversion progress
 
 handler.exception.conversion.conversion = Conversion error: %s
 handler.exception.conversion.overwrite=Overwrite deny: %s
-handler.exception.conversion.read_image=Image read error: %s
+handler.exception.conversion.read_image=Image read error: %s ->%s
 handler.exception.dirlist_task_factory.dirlist.not_found=Dirlist file not found: %s
 handler.exception.dirlist_task_factory.dirlist.wrong_type=Path should be a %s,but was '%s': %s
 handler.exception.dirlist_task_factory.source.overwrite=Overwrite deny: %s
