Show detail when PDFConverterException occur.

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -1,8 +1,7 @@
 execution.convert.start.start_conversion=Start conversion progress
-
-handler.exception.conversion.conversion = Conversion error: %s
-handler.exception.conversion.overwrite=Overwrite deny: %s
-handler.exception.conversion.read_image=Image read error: %s ->%s
+handler.exception.conversion.conversion=Conversion error: %s -> %s
+handler.exception.conversion.overwrite=Overwrite deny: %s 
+handler.exception.conversion.read_image=Image read error: %s -> %s -> %s
 handler.exception.dirlist_task_factory.dirlist.not_found=Dirlist file not found: %s
 handler.exception.dirlist_task_factory.dirlist.wrong_type=Path should be a %s,but was '%s': %s
 handler.exception.dirlist_task_factory.source.overwrite=Overwrite deny: %s
@@ -50,7 +49,7 @@ public.importing = Importing
 public.option = option
 public.parameter = parameter
 img2pdf.convert.pdf_user_password=PDF user password.
-handler.exception.conversion.invalid_file=Illegal file:%s
+handler.exception.conversion.invalid_file=Illegal file: %s -> %s
 handler.exception.dirlist_task_factory.source.no_map_pattern=No mapped value for pattern:%s
 
 
