Fix missing handle EmptyImagesException.

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -4,10 +4,9 @@ handler.exception.conversion.overwrite=Overwrite deny: %s
 handler.exception.conversion.read_image=Image read error: %s -> %s -> %s
 handler.exception.dirlist_task_factory.dirlist.not_found=Dirlist file not found: %s
 handler.exception.dirlist_task_factory.dirlist.wrong_type=Path should be a %s,but was '%s': %s
-handler.exception.dirlist_task_factory.source.overwrite=Overwrite deny: %s
-handler.exception.dirlist_task_factory.source.empty_image = No image was found in %s.
-handler.exception.dirlist_task_factory.source.not_found = Source file not found: %s
-handler.exception.dirlist_task_factory.source.wrong_type = Path should be a %s,but was '%s': %s
+handler.exception.dirlist_task_factory.source.empty_image=%s : No image was found. 
+handler.exception.dirlist_task_factory.source.not_found=%s : Source file not found
+handler.exception.dirlist_task_factory.source.wrong_type=%s : Path should be a %s,but was '%s'
 handler.exception.parameter.missing_required.option = Missing required options: '%s'
 handler.exception.parameter.missing_required.parameter = Missing required parameters: '%s'
 public.try_help = "Try '%s --help' for more information.
@@ -50,6 +49,6 @@ public.option = option
 public.parameter = parameter
 img2pdf.convert.pdf_user_password=PDF user password.
 handler.exception.conversion.invalid_file=Illegal file: %s -> %s
-handler.exception.dirlist_task_factory.source.no_map_pattern=No mapped value for pattern:%s
+handler.exception.dirlist_task_factory.source.no_map_pattern=%s : No mapped value for pattern:%s
 
 
