Restructuring util.file.exception and add FileExceptionHandler

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -50,5 +50,12 @@ public.parameter = parameter
 img2pdf.convert.pdf_user_password=PDF user password.
 handler.exception.conversion.invalid_file=Illegal file: %s -> %s
 handler.exception.dirlist_task_factory.source.no_map_pattern=%s : No mapped value for pattern:%s
+handler.exception.io.file.FileNotExistsException=File not found : %s
+handler.exception.io.file.InvalidFileException=Invalid file : %s
+handler.exception.io.file.WrongFileTypeException=Path should be a %s,but was '%s': %s
+handler.exception.io.file.NoParentException=No parent above : %s
+
+
+
 
 
